<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Communication Board</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="comExp">Common Expressions</string>
    <string name="topics">Topics</string>
    <string name="please">Please</string>
    <string name="thanks">Thank You</string>
    <string name="hello">Hello</string>
    <string name="goodbye">Goodbye</string>
    <string name="repeatThat">Can you repeat that?</string>
    <string name="addExp">Add an Expression</string>
    <string name="work">Workplace</string>
    <string name="daily">Daily Life</string>
    <string name="aboutMe">About Me</string>
</resources>
